--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,37 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hacker Forum</title>
+    <title>H4ck3r F0rum</title>
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <header>
-        <h1>Hacker Forum</h1>
+        <h1>H4ck3r F0rum</h1>
     </header>
     <main>
         <section id="categories">
-            <h2>Categories</h2>
+            <h2>C4t3g0r13s</h2>
             <ul id="category-list"></ul>
         </section>
         <section id="posts">
-            <h2>Posts</h2>
+            <h2>P0sts</h2>
             <div id="post-list"></div>
             <div id="new-post-form" style="display: none;">
-                <h3>Create New Post</h3>
-                <input type="text" id="post-title" placeholder="Title">
-                <textarea id="post-content" placeholder="Content"></textarea>
-                <input type="text" id="post-author" placeholder="Author">
-                <button id="submit-post">Submit Post</button>
+                <h3>Cr34t3 N3w P0st</h3>
+                <input type="text" id="post-title" placeholder="T1tl3">
+                <textarea id="post-content" placeholder="C0nt3nt"></textarea>
+                <input type="text" id="post-author" placeholder="4uth0r">
+                <button id="submit-post">Subm1t P0st</button>
             </div>
         </section>
         <section id="comments" style="display: none;">
-            <h2>Comments</h2>
+            <h2>C0mm3nts</h2>
             <div id="comment-list"></div>
             <div id="new-comment-form">
-                <h3>Add Comment</h3>
-                <textarea id="comment-content" placeholder="Your comment"></textarea>
-                <input type="text" id="comment-author" placeholder="Author">
-                <button id="submit-comment">Submit Comment</button>
+                <h3>4dd C0mm3nt</h3>
+                <textarea id="comment-content" placeholder="Y0ur c0mm3nt"></textarea>
+                <input type="text" id="comment-author" placeholder="4uth0r">
+                <button id="submit-comment">Subm1t C0mm3nt</button>
             </div>
         </section>
     </main>
